--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1826,7 +1826,7 @@
 
  .service-block-one .inner-box {
    position: relative;
-   padding-left: 105px;
+   padding: 0 10px;
    margin-bottom: 55px;
  }
 
@@ -4931,3 +4931,39 @@
  /* .skills-required {
    list-style-type: disc !important;
  } */
+
+ /* custom css */
+ /* .overlay {
+   position: fixed;
+   left: 0;
+   top: 0;
+   background-color: rgb(0, 0, 0, 0.5);
+   height: 100vh;
+   width: 100%;
+   z-index: 1000;
+ } */
+
+ .my-modal {
+   z-index: 2000;
+   position: fixed;
+   height: 100%;
+   width: 100%;
+   background-color: rgb(0, 0, 0, 0.5);
+   backdrop-filter: blur(3px);
+ }
+
+ .custom-alert {
+   /* width: 200px; */
+   /* min-width: 100%; */
+   width: 100%;
+   margin: 100px auto;
+ }
+
+ .btn-close {
+   position: absolute;
+   right: 10px;
+   top: 10px;
+   font-size: 30px;
+   color: #856404;
+   background-color: transparent;
+ }
