--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4967,3 +4967,29 @@
    color: #856404;
    background-color: transparent;
  }
+
+ .btn-close-close {
+   position: absolute;
+   right: 10px;
+   top: 10px;
+   font-size: 30px;
+   color: #000;
+   background-color: transparent;
+ }
+
+ .custom-card {
+  position: relative;
+   height: 300px;
+   width: 300px;
+   z-index: 3000;
+   background-color: #fff;
+   border-radius: 10px;
+ }
+ .scanner-modal {
+   z-index: 2000;
+   position: fixed;
+   height: 100%;
+   width: 100%;
+   background-color: rgb(0, 0, 0, 0.5);
+   backdrop-filter: blur(3px);
+ }
